--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# Create a list of integers from 1 to 50\n",
+    "consecutive_integers = [i for i in range(1, 51)]\n",
+    "\n",
+    "# Print the list\n",
+    "print(consecutive_integers)\n"
    ]
   },
   {
@@ -43,11 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# Create a list of even numbers starting with 2 and ending with 200 \n",
+    "even_numbers = [i for i in range(2, 200)]\n",
+    "\n",
+    "# Print the list\n",
+    "print(even_numbers)"
    ]
   },
   {
@@ -77,11 +103,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.48006452, 0.7876326, 0.77109654, 0.44409793, 0.09014516, 0.81835917, 0.87645456, 0.7066597, 0.09610873, 0.41247947, 0.57433389, 0.29960807, 0.42315023, 0.34452557, 0.4751035, 0.17003563, 0.46843998, 0.92796258, 0.69814654, 0.41290051, 0.19561071, 0.16284783, 0.97016248, 0.71725408, 0.87702738, 0.31244595, 0.76615487, 0.20754036, 0.57871812, 0.07214068, 0.40356048, 0.12149553, 0.53222417, 0.9976855, 0.12536346, 0.80930099, 0.50962849, 0.94555126, 0.33364763]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# Given 10 x 4 array\n",
+    "a = [\n",
+    "    [0.84062117, 0.48006452, 0.7876326, 0.77109654],\n",
+    "    [0.44409793, 0.09014516, 0.81835917, 0.87645456],\n",
+    "    [0.7066597, 0.09610873, 0.41247947, 0.57433389],\n",
+    "    [0.29960807, 0.42315023, 0.34452557, 0.4751035],\n",
+    "    [0.17003563, 0.46843998, 0.92796258, 0.69814654],\n",
+    "    [0.41290051, 0.19561071, 0.16284783, 0.97016248],\n",
+    "    [0.71725408, 0.87702738, 0.31244595, 0.76615487],\n",
+    "    [0.20754036, 0.57871812, 0.07214068, 0.40356048],\n",
+    "    [0.12149553, 0.53222417, 0.9976855, 0.12536346],\n",
+    "    [0.80930099, 0.50962849, 0.94555126, 0.33364763]\n",
+    "]\n",
+    "\n",
+    "# Flattening the 2D array into a 1D list using list comprehension\n",
+    "flattened_list = [element for row in a for element in row]\n",
+    "\n",
+    "# Print the flattened list\n",
+    "print(flattened_list)\n"
    ]
   },
   {
@@ -93,11 +146,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.7876326, 0.77109654, 0.81835917, 0.87645456, 0.7066597, 0.57433389, 0.92796258, 0.69814654, 0.97016248, 0.71725408, 0.87702738, 0.76615487, 0.57871812, 0.53222417, 0.9976855, 0.80930099, 0.50962849, 0.94555126]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# Given 10 x 4 array\n",
+    "a = [\n",
+    "    [0.84062117, 0.48006452, 0.7876326, 0.77109654],\n",
+    "    [0.44409793, 0.09014516, 0.81835917, 0.87645456],\n",
+    "    [0.7066597, 0.09610873, 0.41247947, 0.57433389],\n",
+    "    [0.29960807, 0.42315023, 0.34452557, 0.4751035],\n",
+    "    [0.17003563, 0.46843998, 0.92796258, 0.69814654],\n",
+    "    [0.41290051, 0.19561071, 0.16284783, 0.97016248],\n",
+    "    [0.71725408, 0.87702738, 0.31244595, 0.76615487],\n",
+    "    [0.20754036, 0.57871812, 0.07214068, 0.40356048],\n",
+    "    [0.12149553, 0.53222417, 0.9976855, 0.12536346],\n",
+    "    [0.80930099, 0.50962849, 0.94555126, 0.33364763]\n",
+    "]\n",
+    "\n",
+    "# Flattening the 2D array into a 1D list with values >= 0.5\n",
+    "filtered_list = [element for row in a for element in row if element >= 0.5]\n",
+    "\n",
+    "# Print the filtered list\n",
+    "print(filtered_list)\n"
    ]
   },
   {
@@ -131,11 +211,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.55867166, 0.06210792, 0.08147297, 0.82579068, 0.91512478, 0.06833034, 0.05440634, 0.65857693, 0.30296619, 0.06769833, 0.96031863, 0.51293743, 0.09143215, 0.71893382, 0.45850679, 0.58256464, 0.59005654, 0.56266457, 0.71600294, 0.87392666, 0.11434044, 0.8694668, 0.65669313, 0.10708681, 0.07529684, 0.46470767, 0.47984544, 0.65368638, 0.14901286, 0.23760688]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# Given 5 x 2 x 3 array\n",
+    "b = [\n",
+    "    [[0.55867166, 0.06210792, 0.08147297], [0.82579068, 0.91512478, 0.06833034]],\n",
+    "    [[0.05440634, 0.65857693, 0.30296619], [0.06769833, 0.96031863, 0.51293743]],\n",
+    "    [[0.09143215, 0.71893382, 0.45850679], [0.58256464, 0.59005654, 0.56266457]],\n",
+    "    [[0.71600294, 0.87392666, 0.11434044], [0.8694668, 0.65669313, 0.10708681]],\n",
+    "    [[0.07529684, 0.46470767, 0.47984544], [0.65368638, 0.14901286, 0.23760688]]\n",
+    "]\n",
+    "\n",
+    "# Flattening the 3D array into a 1D list using list comprehension\n",
+    "flattened_list = [element for sublist1 in b for sublist2 in sublist1 for element in sublist2]\n",
+    "\n",
+    "# Print the flattened list\n",
+    "print(flattened_list)\n"
    ]
   },
   {
@@ -147,11 +249,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.08147297, 0.06833034, 0.30296619, 0.45850679, 0.11434044, 0.10708681, 0.47984544, 0.23760688]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "# Given 5 x 2 x 3 array\n",
+    "b = [\n",
+    "    [[0.55867166, 0.06210792, 0.08147297], [0.82579068, 0.91512478, 0.06833034]],\n",
+    "    [[0.05440634, 0.65857693, 0.30296619], [0.06769833, 0.96031863, 0.51293743]],\n",
+    "    [[0.09143215, 0.71893382, 0.45850679], [0.58256464, 0.59005654, 0.56266457]],\n",
+    "    [[0.71600294, 0.87392666, 0.11434044], [0.8694668, 0.65669313, 0.10708681]],\n",
+    "    [[0.07529684, 0.46470767, 0.47984544], [0.65368638, 0.14901286, 0.23760688]]\n",
+    "]\n",
+    "\n",
+    "# Using list comprehension to filter and print the last value of each subarray if it is <= 0.5\n",
+    "filtered_list = [sublist2[-1] for sublist1 in b for sublist2 in sublist1 if sublist2[-1] <= 0.5]\n",
+    "\n",
+    "# Print the filtered list\n",
+    "print(filtered_list)\n"
    ]
   },
   {
@@ -205,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   },
   "vscode": {
    "interpreter": {
